RenewFlow/force-app/main/default/objects/Subscription__c/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <label>MRR</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
    <description>Monthly recurring revenue for this subscription.</description>
</CustomField>