RenewFlow/force-app/main/default/objects/Subscription__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Text</type>
    <length>120</length>
</CustomField>