RenewFlow/force-app/main/default/objects/Subscription__c/fields/Renewal_Generated__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Generated__c</fullName>
    <label>Renewal Generated</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Set when the renewal batch has already created a renewal for this subscription.</description>
</CustomField>