RenewFlow/force-app/main/default/objects/Subscription__c/fields/Renewal_Of__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Of__c</fullName>
    <label>Renewal Of</label>
    <type>Lookup</type>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Renewals</relationshipLabel>
    <relationshipName>Renewals</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The prior subscription this record renews.</description>
</CustomField>