RenewFlow/force-app/main/default/objects/Subscription__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Pending Renewal</fullName><default>false</default><label>Pending Renewal</label></value>
            <value><fullName>Renewed</fullName><default>false</default><label>Renewed</label></value>
            <value><fullName>Churned</fullName><default>false</default><label>Churned</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>