RenewFlow/force-app/main/default/objects/Subscription__c/fields/Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_Months__c</fullName>
    <label>Term (Months)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>